# Giveaway

./: .replit  .replitignore  pyproject.toml  railway.toml  replit.md
giveaway-bot/: README.md  bot.py  invite_tracker.py  nixpacks.toml  railway.json  render.yaml  requirements.txt  role_config.json
giveaway-bot/templates/: active.html  base.html  dashboard.html  edit_role.html  history.html  login.html  roles.html  settings.html
